Client: fixed overflow problem for pricing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,7 @@ html, body {
 
 .logo {
   height: 6em;
-  padding: 1.5em;
+  padding: 1em;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -40,7 +40,7 @@ html, body {
 }
 
 .card {
-  padding: 2em;
+  padding: 1em;
 }
 
 .read-the-docs {
